# oc-oxide

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pages.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  label.tsx  tabs.tsx
apps/desktop/src/types/: ipc.ts
bins/oc-oxide-daemon/: Cargo.toml
bins/oc-oxide-daemon/src/: lib.rs  main.rs
bins/oc-oxide-daemon/tests/: m6_no_network.rs
bins/ocx/: Cargo.toml
bins/ocx/src/: main.rs
crates/oc-oxide-auth/: Cargo.toml
crates/oc-oxide-auth/src/: lib.rs
crates/oc-oxide-config/: Cargo.toml
crates/oc-oxide-config/src/: lib.rs
crates/oc-oxide-dns/: Cargo.toml
crates/oc-oxide-dns/src/: lib.rs
crates/oc-oxide-dns/tests/: m5_no_network.rs
crates/oc-oxide-ipc/: Cargo.toml
crates/oc-oxide-ipc/src/: lib.rs
crates/oc-oxide-net/: Cargo.toml
crates/oc-oxide-net/src/: lib.rs  linux.rs
crates/oc-oxide-net/tests/: m4_no_network.rs
crates/oc-oxide-openconnect-sys/: Cargo.toml  build.rs  wrapper.h
crates/oc-oxide-openconnect-sys/csrc/: progress_shim.c
crates/oc-oxide-openconnect-sys/src/: lib.rs
crates/oc-oxide-policy/: Cargo.toml
crates/oc-oxide-policy/src/: lib.rs
crates/oc-oxide-sync/: Cargo.toml
crates/oc-oxide-sync/src/: lib.rs
crates/oc-oxide-tunnel/: Cargo.toml
crates/oc-oxide-tunnel/src/: lib.rs
crates/oc-oxide-tunnel/tests/: m2_m3_auth_no_network.rs  m2_no_network.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DISTRIBUTION.md  ONBOARDING.md  README.md  SECURITY_MODEL.md  oc-oxide-architecture-diagram.html
docs/archive/: ANYCONNECT_AUTH_AND_FAKE_IP_NOTES.md  GITHUB_SYNC.md  IMPLEMENTATION_PLAN.md  POLICY_MODE_DESIGN.md  TOML_PROFILE_AND_VAULT_PLAN.md
packaging/: dist-local.sh  sync-version.sh
packaging/linux/: build-apt-repo.sh  build-deb.sh  build-tarball.sh  generate-updater-json.sh  install-release.sh  install.sh  oc-oxide-update.sh  sign-artifacts.sh  uninstall.sh
packaging/polkit/: com.github.fudanglp.oc-oxide.policy
packaging/systemd/: oc-oxide-daemon.service
site/: CNAME  index.html  privacy.html  styles.css
