[package]
name = "oc-oxide-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IPC protocol between clients and the privileged daemon"

[lib]
name = "oc_oxide_ipc"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
