[package]
name = "oc-oxide-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
oc-oxide-config.workspace = true
oc-oxide-ipc.workspace = true
oc-oxide-sync.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2.4.2"
